@@ -177,6 +177,8 @@ admin.version: '&6Current plugin version: %s'
 admin.noTeam: '&4That is not a team'
 admin.home.success: '&6You have been teleported to that teams home'
 admin.home.noHome: '&4That team does not have a home set'
+admin.name.success: '&6The team name has been changed'
+
 
 # for the nametag syntax
 nametag.syntax: '&6&l%s&r '
