@@ -60,10 +60,12 @@ Fixed a problem with the placeholder %betterteams_rank%
 
 3.1.0
 Features: 
-
+Added admin commands: /teama name <team> <name>,
 
 Improvements:
 Commands and cooldowns only activate if the command is successful
+Added placeholder %betterteams_color% to use the team color
+Improved help message if a command is invalid
 
 Bug Fixes: 
 Fixed a problem when placeholder API is not present on the server. 
@@ -71,6 +73,9 @@ Fixed a problem when placeholder API is not present on the server.
 TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
 Add command cost and cooldown to documentation 
 add /team color to documentation
+commands to add to documentation, plugin.yml and plugin page: /teama name, 
+
+update messages.yml and config.yml version 
 
 
 
